@@ -3,12 +3,12 @@ Section: gnome
 Priority: optional
 Maintainer: Guilherme de S. Pastore <gpastore@debian.org>
 Standards-Version: 3.6.2
-Build-Depends: cdbs, debhelper (>= 4.1.0), liborbit2-dev (>= 1:2.10.2-1.1), intltool, libgnomeui-dev (>= 2.10.0), libvte-dev (>= 1:0.11.13), libglade2-dev (>= 2.5.1), scrollkeeper, libstartup-notification0-dev, libgnomevfs2-dev (>= 2.10.0), gnome-pkg-tools, docbook-to-man
+Build-Depends: cdbs, debhelper (>= 4.1.0), liborbit2-dev (>= 1:2.10.2-1.1), intltool, libgnomeui-dev (>= 2.10.0), libvte-dev (>= 1:0.11.13), libglade2-dev (>= 2.5.1), scrollkeeper, libstartup-notification0-dev, libgnomevfs2-dev (>= 2.10.0), gnome-pkg-tools (>= 0.4), docbook-to-man
 Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Akira TAGOH <tagoh@debian.org>, Andreas Rottmann <rotty@debian.org>, Andrew Lau <netsnipe@users.sourceforge.net>, Clément Stenac <zorglub@debian.org>, Dafydd Harries <daf@debian.org>, Ed Boraas <ed@debian.org>, Emil Soleyman-Zomalan <emil@nishra.com>, Gustavo Noronha Silva <kov@debian.org>, J.H.M. Dassen (Ray) <jdassen@debian.org>, Joe Drew <drew@debian.org>, Johannes Rohr <jr.debian@rohr.org>, Jordi Mallach <jordi@debian.org>, Jose Carlos Garcia Sogo <jsogo@debian.org>, Josselin Mouette <joss@debian.org>, Loic Minier <lool@dooz.org>, Marc 'HE' Brockschmidt <he@debian.org>, Ondřej Surý <ondrej@debian.org>, Rob Bradford <rob@debianplanet.org>, Robert McQueen <robot101@debian.org>, Ross Burton <ross@debian.org>, Sebastien Bacher <seb128@debian.org>, Sjoerd Simons <sjoerd@debian.org>, Takuo KITAME <kitame@debian.org>
 
 Package: gnome-terminal
 Architecture: any
-Depends: ${shlibs:Depends}, scrollkeeper (>= 0.3.14-5), gnome-control-center (>= 1:2.8.0), gnome-terminal-data (= ${Source-Version})
+Depends: ${shlibs:Depends}, scrollkeeper (>= 0.3.14-5), gnome-control-center (>= 1:2.8.0), gnome-terminal-data (= ${Arch-all-Version})
 Conflicts: gnome-terminal2
 Replaces: gnome-terminal2
 Provides: x-terminal-emulator
