@@ -1,8 +1,12 @@
 gnome-terminal (2.14.1-2) UNRELEASED; urgency=low
 
   * List fatalerror as the primary maintainer.
+  * Make the package binNMU-safe.
+    + Build-depend on gnome-pkg-tools 0.4.
+    + Use ${Arch-all-Version}.
+    + Include the arch-all.mk rule file.
 
- -- Josselin Mouette <joss@debian.org>  Sat, 29 Apr 2006 02:39:09 +0200
+ -- Josselin Mouette <joss@debian.org>  Thu,  4 May 2006 22:45:29 +0200
 
 gnome-terminal (2.14.1-1) unstable; urgency=low
 
